--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ python:
     - "3.2"
     - "3.3"
 
-install: pip install .
+install: echo "nothing to install"
 
 script: python -m doctest rename.py
