--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ python:
     - "3.2"
     - "3.3"
 
-install: echo "nothing to install"
+install: pip install -r requirements.txt
 
 script: python -m unittest discover tests/ -v
